#28 Introduced PlanDto to handle new tag creation